# agent-skills-lint

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_frontmatter.rs  validate_metadata.rs
scripts/: test-readme.sh
src/: discovery.rs  error.rs  fix.rs  formatting.rs  lib.rs  main.rs  skill.rs  validation.rs
tests/: cli.rs  readme.rs
