[package]
name = "agent-skills-lint"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Linter and formatter for Agent Skills (SKILL.md) files"
repository = "https://github.com/greggdonovan/agent-skills-lint"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde_yaml = "0.9.34"
unicode-normalization = "0.1.24"
walkdir = "2.5.0"
