[package]
name = "agent-skills-lint"
version = "0.1.4"
edition = "2021"
rust-version = "1.92"
license = "MIT"
readme = "README.md"
description = "Linter and formatter for Agent Skills (SKILL.md) files"
repository = "https://github.com/greggdonovan/agent-skills-lint"
homepage = "https://github.com/greggdonovan/agent-skills-lint"
documentation = "https://docs.rs/agent-skills-lint"
keywords = ["lint", "skill", "yaml", "frontmatter", "agent"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Gregg Donovan"]
include = [
    "src/**/*",
    "tests/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy for this project
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
map_unwrap_or = "allow"
option_if_let_else = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"
format_push_string = "allow"
manual_let_else = "allow"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
# Note: serde_yaml is deprecated but alternatives (serde_yml) are still early-stage.
# TODO: Migrate to serde_yml when it reaches 1.0
serde_yaml = "0.9.34"
thiserror = "1.0"
unicode-normalization = "0.1.24"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
pretty_assertions = "1.4.0"
proptest = "1.4.0"
tempfile = "3.10.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "agent-skills-lint"
path = "src/main.rs"
